// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Layout Snapshots All 1`] = `
<div
  className="sc-bdfBwQ XOvfA"
>
  <div
    className="sc-gsTCUz cGZqIC ClassName"
  >
    I'm the header inside a row!
  </div>
</div>
`;

exports[`Layout Snapshots ClassName 1`] = `
<div
  className="sc-bdfBwQ dmzwTs ClassName"
>
  <div
    className="sc-gsTCUz cGZqIC ClassName"
  >
    I'm the header inside a row!
  </div>
</div>
`;

exports[`Layout Snapshots Item area 1`] = `
<div
  className="sc-bdfBwQ dSeEYg"
>
  <div
    className="sc-gsTCUz gkDsJ ClassName"
  >
    I'm the header inside a row!
  </div>
</div>
`;

exports[`Layout Snapshots No Children 1`] = `
<div
  className="sc-bdfBwQ dmzwTs"
/>
`;

exports[`Layout Snapshots No props 1`] = `
<div
  className="sc-bdfBwQ dmzwTs"
>
  <div
    className="sc-gsTCUz cGZqIC"
  >
    I'm the header inside a row!
  </div>
</div>
`;

exports[`Layout Snapshots columnGap 1`] = `
<div
  className="sc-bdfBwQ gePjHB"
>
  <div
    className="sc-gsTCUz cGZqIC ClassName"
  >
    I'm the header inside a row!
  </div>
</div>
`;

exports[`Layout Snapshots grid 1`] = `
<div
  className="sc-bdfBwQ dSeEYg"
>
  <div
    className="sc-gsTCUz cGZqIC ClassName"
  >
    I'm the header inside a row!
  </div>
</div>
`;

exports[`Layout Snapshots isNotFlush 1`] = `
<div
  className="sc-bdfBwQ cLpGST"
>
  <div
    className="sc-gsTCUz cGZqIC ClassName"
  >
    I'm the header inside a row!
  </div>
</div>
`;

exports[`Layout Snapshots paddingBottom 1`] = `
<div
  className="sc-bdfBwQ dmzwTs"
>
  <div
    className="sc-gsTCUz cGZqIC ClassName"
  >
    I'm the header inside a row!
  </div>
</div>
`;

exports[`Layout Snapshots paddingTop 1`] = `
<div
  className="sc-bdfBwQ dmzwTs"
>
  <div
    className="sc-gsTCUz cGZqIC ClassName"
  >
    I'm the header inside a row!
  </div>
</div>
`;

exports[`Layout Snapshots rowGap 1`] = `
<div
  className="sc-bdfBwQ gdbDtt"
>
  <div
    className="sc-gsTCUz cGZqIC ClassName"
  >
    I'm the header inside a row!
  </div>
</div>
`;
